Use bridge ports for gateway frame routing
Replace the previous handler-based routing model with explicit gateway frame ports/bridges and a GatewayFrameKind classification. Removed FrameRouteResolution, MassMessageEventCodeResolver and TransportInboundRoute and introduced TaskStepFrameBridge, ControlEventRequestFrameBridge and ControlEventResponseFrameSink. Middleware now classifies frames and dispatches them to configured bridges/sinks via DispatchRuntimeContext; transport bindings provide task-step bridges instead of inbound route lists. Updated MassApplication, MassSdkApplication, GatewayTaskResultHandler, WorkerControlEventResponseHandler, TransportBinding and TransportRuntimeRegistry to wire the new ports (with a deprecated compatibility shim for the old bridge handler). Tests and docs updated to match the new routing model and to reorganize agent/task-type guidance and references.